--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,13 @@
 {
     "@@locale": "en",
     "helloWorld": "Hello World!",
-    "@helloWorld": {
-        "description": "The conventional newborn programmer greeting"
-    }
+    "@helloWorld": {},
+    "sign_in_to_your_account": "Sign in to your Account",
+    "@sign_in_to_your_account": {},
+    "dont_have_an_account": "Don't have an account?",
+    "@dont_have_an_account": {},
+    "sign_up": "Sign Up",
+    "@sign_up": {},
+    "forgot_your_password": "Forgot your password?",
+    "@forgot_your_password": {}
 }
