feat: integrate lottie

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,5 +17,13 @@
     "login": "Login",
     "@login": {},
     "register": "Register",
-    "@register": {}
+    "@register": {},
+    "name": "Name",
+    "@name": {},
+    "email": "Email",
+    "@email": {},
+    "password": "Password",
+    "@password": {},
+    "confirm_password": "Confirm Password",
+    "@confirm_password": {}
 }
