feat: add validator

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,5 +25,21 @@
     "password": "Password",
     "@password": {},
     "confirm_password": "Confirm Password",
-    "@confirm_password": {}
+    "@confirm_password": {},
+    "name_is_required": "Name is required",
+    "@name_is_required": {},
+    "email_is_required": "Email is required",
+    "email_must_be_valid": "Email must be valid",
+    "@email_must_be_valid": {},
+    "@email_is_required": {},
+    "password_is_required": "Password is required",
+    "@password_is_required": {},
+    "password_must_be_at_least_6_characters": "Password must be at least 6 characters",
+    "@password_must_be_at_least_6_characters": {},
+    "password_must_be_alpha_numeric": "Password must be alpha numeric",
+    "@password_must_be_alpha_numeric": {},
+    "confirm_password_is_required": "Confirm Password is required",
+    "@confirm_password_is_required": {},
+    "passwords_do_not_match": "Passwords do not match",
+    "@passwords_do_not_match": {}
 }
