--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -25,5 +25,21 @@
     "password": "Kata Laluan",
     "@password": {},
     "confirm_password": "Sahkan Kata Laluan",
-    "@confirm_password": {}
+    "@confirm_password": {},
+    "name_is_required": "Nama diperlukan",
+    "@name_is_required": {},
+    "email_is_required": "Emel diperlukan",
+    "@email_is_required": {},
+    "email_must_be_valid": "Emel mestilah sah",
+    "@email_must_be_valid": {},
+    "password_is_required": "Kata laluan diperlukan",
+    "@password_is_required": {},
+    "password_must_be_at_least_6_characters": "Kata laluan harus sekurang-kurangnya enam aksara",
+    "@password_must_be_at_least_6_characters": {},
+    "password_must_be_alpha_numeric": "Kata laluan harus alpha-numeric",
+    "@password_must_be_alpha_numeric": {},
+    "confirm_password_is_required": "Sahkan Kata Laluan diperlukan",
+    "@confirm_password_is_required": {},
+    "passwords_do_not_match": "Kata laluan tidak sepadan",
+    "@passwords_do_not_match": {}
 }
