feat: user informatino screen

--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -47,5 +47,23 @@
     "you_can_now_log_in_and_start_exploring": "Anda kini boleh log masuk dan mula meneroka.",
     "@you_can_now_log_in_and_start_exploring": {},
     "continue_to_login": "Teruskan ke Log Masuk",
-    "@continue_to_login": {}
+    "@continue_to_login": {},
+    "user_information": "Maklumat Pengguna",
+    "@user_information": {},
+    "phone_number": "Nombor Telefon",
+    "@phone_number": {},
+    "eg_john_doe": "cth. John Doe",
+    "@eg_john_doe": {},
+    "eg_60123456789": "cth. +60123456789",
+    "@eg_60123456789": {},
+    "eg_johndoemailcom": "e.g. qX9lM@example.com",
+    "@eg_johndoemailcom": {},
+    "optional": "Pilihan",
+    "@optional": {},
+    "department": "Jabatan",
+    "@department": {},
+    "position": "Jawatan",
+    "@position": {},
+    "continue_string": "Teruskan",
+    "@continue_string": {}
 }
