--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -47,5 +47,23 @@
     "you_can_now_log_in_and_start_exploring": "You can now log in and start exploring.",
     "@you_can_now_log_in_and_start_exploring": {},
     "continue_to_login": "Continue to Login",
-    "@continue_to_login": {}
+    "@continue_to_login": {},
+    "user_information": "User Information",
+    "@user_information": {},
+    "phone_number": "Phone Number",
+    "@phone_number": {},
+    "eg_john_doe": "e.g. John Doe",
+    "@eg_john_doe": {},
+    "eg_60123456789": "e.g. +60123456789",
+    "@eg_60123456789": {},
+    "eg_johndoemailcom": "e.g. qX9lM@example.com",
+    "@eg_johndoemailcom": {},
+    "optional": "Optional",
+    "@optional": {},
+    "department": "Department",
+    "@department": {},
+    "position": "Position",
+    "@position": {},
+    "continue_string": "Continue",
+    "@continue_string": {}
 }
