feat: enhance textfield

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,5 +65,7 @@
     "position": "Position",
     "@position": {},
     "continue_string": "Continue",
-    "@continue_string": {}
+    "@continue_string": {},
+    "asterisk": "*",
+    "@asterisk": {}
 }
