--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -65,5 +65,7 @@
     "position": "Jawatan",
     "@position": {},
     "continue_string": "Teruskan",
-    "@continue_string": {}
+    "@continue_string": {},
+    "asterisk": "*",
+    "@asterisk": {}
 }
