feat: create UI for the password

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -73,5 +73,7 @@
     "eg_software_engineer": "e.g. Software Engineer",
     "@eg_software_engineer": {},
     "organization_information": "Organization Information",
-    "@organization_information": {}
+    "@organization_information": {},
+    "password_setup": "Password Setup",
+    "@password_setup": {}
 }
