--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -75,5 +75,7 @@
     "organization_information": "Organization Information",
     "@organization_information": {},
     "password_setup": "Password Setup",
-    "@password_setup": {}
+    "@password_setup": {},
+    "eg_ABC_sdn_bhd": "e.g. ABC Sdn Bhd",
+    "@eg_ABC_sdn_bhd": {}
 }
