--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -74,5 +74,7 @@
     "@eg_software_engineer": {},
     "organization_information": "Maklumat Organisasi",
     "password_setup": "Setup Kata Laluan",
-    "@password_setup": {}
+    "@password_setup": {},
+    "eg_ABC_sdn_bhd": "e.g. ABC Sdn Bhd",
+    "@eg_ABC_sdn_bhd": {}
 }
