feat: complete validator

--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -34,8 +34,8 @@
     "@email_must_be_valid": {},
     "password_is_required": "Kata laluan diperlukan",
     "@password_is_required": {},
-    "password_must_be_at_least_6_characters": "Kata laluan harus sekurang-kurangnya enam aksara",
-    "@password_must_be_at_least_6_characters": {},
+    "password_must_be_at_least_8_characters": "Kata laluan harus sekurang-kurangnya lapan aksara",
+    "@password_must_be_at_least_8_characters": {},
     "password_must_be_alpha_numeric": "Kata laluan harus alpha-numeric",
     "@password_must_be_alpha_numeric": {},
     "confirm_password_is_required": "Sahkan Kata Laluan diperlukan",
