--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,5 +77,9 @@
     "password_setup": "Password Setup",
     "@password_setup": {},
     "eg_ABC_sdn_bhd": "e.g. ABC Sdn Bhd",
-    "@eg_ABC_sdn_bhd": {}
+    "@eg_ABC_sdn_bhd": {},
+    "registration_failed": "Registration Failed",
+    "@registration_failed": {},
+    "please_check_your_details_and_try_again": "Please check your details and try again.",
+    "@please_check_your_details_and_try_again": {}
 }
