--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -80,5 +80,9 @@
     "registration_failed": "Pendaftaran Gagal",
     "@registration_failed": {},
     "please_check_your_details_and_try_again": "Sila semak maklumat anda dan cuba lagi.",
-    "@please_check_your_details_and_try_again": {}
+    "@please_check_your_details_and_try_again": {},
+    "password_must_contain_special_character": "Kata laluan mestilah mengandungi aksara khas",
+    "@password_must_contain_special_character": {},
+    "password_must_be_mixed_case": "Kata laluan mestilah mengandungi huruf besar dan kecil",
+    "@password_must_be_mixed_case": {}
 }
