--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -87,5 +87,9 @@
     "password_must_be_mixed_case": "Password must be mixed case",
     "@password_must_be_mixed_case": {},
     "welcome_back": "Welcome Back!",
-    "@welcome_back": {}
+    "@welcome_back": {},
+    "categories": "Categories",
+    "@categories": {},
+    "products": "Products",
+    "@products": {}
 }
