feat: integration with the create category

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -91,5 +91,7 @@
     "categories": "Categories",
     "@categories": {},
     "products": "Products",
-    "@products": {}
+    "@products": {},
+    "add_category": "Add Category",
+    "@add_category": {}
 }
