--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -90,5 +90,7 @@
     "categories": "Kategori",
     "@categories": {},
     "products": "Produk",
-    "@products": {}
+    "@products": {},
+    "add_category": "Tambah Kategori",
+    "@add_category": {}
 }
