--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -98,5 +98,13 @@
     "verified": "Disahkan",
     "@verified": {},
     "not_verified": "Tidak Disahkan",
-    "@not_verified": {}
+    "@not_verified": {},
+    "settings": "Tetapan",
+    "@settings": {},
+    "logout": "Log Keluar",
+    "@logout": {},
+    "are_you_sure_you_want_to_log_out_of_your_account": "Adakah anda pasti mahu log keluar daripada akaun anda?",
+    "@are_you_sure_you_want_to_log_out_of_your_account": {},
+    "cancel": "Batal",
+    "@cancel": {}
 }
