feat: complete create product

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -129,5 +129,9 @@
     "no": "No",
     "@no": {},
     "save": "Save",
-    "@save": {}
+    "@save": {},
+    "details_and_description": "Details & Description",
+    "@details_and_description": {},
+    "unit": "Unit",
+    "@unit": {}
 }
